# Opinex

./: .gitignore  README.md  data.txt  doc.txt  docker-compose.yaml  init-db.sh  package-lock.json  package.json  variables.txt  variables.txt''
.githu/workflows/: ci.yaml  cummy.ya
.github/workflows/: ci.yaml  cummy.ya
backend/auth/: .env  docker-compose.yml  otel-collector-config.yaml  package.json  prometheus.yaml  prometheus.yml  tsconfig.json
backend/db/: package.json
backend/dbserver/: .env  package.json
backend/dummy/: .env
backend/engine/: go.mod
backend/event/: .env  a.txt  package.json
backend/holding/: .env  a.txt  go.mod  go.sum  package.json
backend/order/: a.txt  pyproject.toml
backend/order/src/: main.py
backend/order/src/config/: config.py  load_env.py
backend/order/src/config/cache/: cache.py
backend/order/src/config/db/: db.py  query.py
backend/order/src/config/pubsub/: pubsub.py
backend/order/src/controllers/: event_controller.py  order_controller.py
backend/order/src/middleware/: jwt.py
backend/order/src/models/: auth_model.py  order_model.py  trade_model.py
backend/order/src/routes/: order_routes.py
backend/order/src/utils/: id.py  init.py  logger.py
backend/trade/: a.txt
docker/: docker-compose.resources.yaml  docker-compose.yaml  example.docker-compose.resources.yaml  example.docker-compose.yaml
docker/DBS/: docker-compose.yaml
docker/auth/: Dockerfile  docker-compose.resources.yaml  (+3 more)
docs/: dummy.md
scripts/: build_images.sh  checkservice.sh  cleanup.sh  resource.sh  start.sh  tag_images.sh
(+97 files in other folders)
